--- a/Motor2/Motor2.vcxproj
+++ b/Motor2/Motor2.vcxproj
@@ -135,15 +135,25 @@
   <ItemGroup>
     <ClCompile Include="Error.cpp" />
     <ClCompile Include="GLS_Program.cpp" />
+    <ClCompile Include="GLTexture.cpp" />
+    <ClCompile Include="ImageLoader.cpp" />
+    <ClCompile Include="IOManager.cpp" />
     <ClCompile Include="MainGame.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="picoPNG.cpp" />
     <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="TextureCache.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Error.h" />
     <ClInclude Include="GLS_Program.h" />
+    <ClInclude Include="GLTexture.h" />
+    <ClInclude Include="ImageLoader.h" />
+    <ClInclude Include="IOManager.h" />
     <ClInclude Include="MainGame.h" />
+    <ClInclude Include="picoPNG.h" />
     <ClInclude Include="Sprite.h" />
+    <ClInclude Include="TextureCache.h" />
     <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <ItemGroup>
