--- a/Motor2/Motor2.vcxproj.filters
+++ b/Motor2/Motor2.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClCompile Include="TextureCache.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ResourceManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainGame.h">
@@ -80,12 +86,18 @@
     <ClInclude Include="TextureCache.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ResourceManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Window.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="Shaders\colorShaderFrag.txt">
+    <Text Include="Shaders\colorShaderFrag.frag">
       <Filter>Source Files\SHADERS</Filter>
     </Text>
-    <Text Include="Shaders\colorShaderVert.txt">
+    <Text Include="Shaders\colorShaderVert.vert">
       <Filter>Source Files\SHADERS</Filter>
     </Text>
   </ItemGroup>
