class input mangaer reale

--- a/Motor2/Motor2.vcxproj
+++ b/Motor2/Motor2.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="GLS_Program.cpp" />
     <ClCompile Include="GLTexture.cpp" />
     <ClCompile Include="ImageLoader.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="IOManager.cpp" />
     <ClCompile Include="MainGame.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -153,6 +154,7 @@
     <ClInclude Include="GLS_Program.h" />
     <ClInclude Include="GLTexture.h" />
     <ClInclude Include="ImageLoader.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="IOManager.h" />
     <ClInclude Include="MainGame.h" />
     <ClInclude Include="picoPNG.h" />
